opam-version: "2.0"
name: "reex"
synopsis: "Regular expressions and derivatives"
version: "dev"
maintainer: "yallop@gmail.com"
authors: ["Jeremy Yallop <yallop@gmail.com>"]
homepage: "https://github.com/yallop/reex"
dev-repo: "git+https://github.com/yallop/reex.git"
bug-reports: "https://github.com/yallop/reex/issues"
license: "MIT"
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
   "ocaml"
   "dune"
   "ppx_deriving"
   "charset"
   "regenerate" {with-test}
   "ounit" {with-test}
]
